# drift-fx-jogl

./: .gitignore  README.md  pom.xml
drift-fx-jogl/: pom.xml
drift-fx-jogl-jfx11/: pom.xml
drift-fx-jogl-jfx11/src/main/java/dev/anctil/fx/drift/jogl/: DriftFXSurface.java  DriftFXSurfaceHelper.java
drift-fx-jogl-jfx8/: pom.xml
drift-fx-jogl-jfx8/src/main/java/dev/anctil/fx/drift/jogl/: DriftFXSurface.java  JOGLTransferCallback.java
drift-fx-jogl-native/: CMakeLists.txt  build.bat  pom.xml
drift-fx-jogl-native/DriftFX/: CMakeLists.txt
drift-fx-jogl-native/DriftFX/include/DriftFX/: DriftFX.h  DriftFXSurface.h  RenderTarget.h
drift-fx-jogl-native/DriftFX/include/DriftFX/GL/: GLContext.h  GLDebug.h
drift-fx-jogl-native/DriftFX/src/: InternalDriftFX.cpp  InternalDriftFX.h  JNINativeSurface.cpp  JNINativeSurface.h  NativeSurface.cpp  NativeSurface.h  NativeSurfaceAPI.cpp  NativeSurfaceRegistry.cpp  NativeSurfaceRegistry.h  SharedTexture.h
drift-fx-jogl-native/DriftFX/src/gl/: ExternalGLContext.cpp  ExternalGLContext.h  GLTexture.cpp
drift-fx-jogl-native/DriftFX/src/prism/: PrismBridge.cpp  PrismBridge.h
drift-fx-jogl-native/DriftFX/src/prism/d3d/: D3DNativeSurface.cpp  D3DNativeSurface.h  D3DPrismBridge.cpp  D3DPrismBridge.h  D3DSharedTexture.cpp  NativeAPI.cpp
drift-fx-jogl-native/DriftFX/src/win32/: D3D9ExContext.cpp  Error.h
drift-fx-jogl-native/lib/utils/: CMakeLists.txt
drift-fx-jogl-native/lib/utils/include/utils/: JNIHelper.h  Logger.h
drift-fx-jogl-native/lib/utils/src/: JNIHelper.cpp  Logger.cpp
drift-fx-jogl/src/assembly/: mrjar.xml
(+5 files in other folders)
